running with swagger
