# handlers/get.go
@@ -7,12 +7,12 @@ import (
 )
 
 // swagger:route GET /products products listProducts
-// Returns a list of products from the database
+// Return a list of products from the database
 // responses:
-//	200: productsReponse
+//	200: productsResponse
 
 // ListAll handles GET requests and returns all current products
-func (p *Products) ListAll(rw http.ResponseWriter, h *http.Request) {
+func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
 
 	prods := data.GetProducts()
@@ -24,11 +24,11 @@ func (p *Products) ListAll(rw http.ResponseWriter, h *http.Request) {
 	}
 }
 
-//swagger:route GET /products/{id} products listSingle
-// Reutnr a list of proucts from the database
+// swagger:route GET /products/{id} products listSingle
+// Return a list of products from the database
 // responses:
-// 	200: productResponse
-//  404: errorResponse
+//	200: productResponse
+//	404: errorResponse
 
 // ListSingle handles GET requests
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
@@ -36,15 +36,15 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 
 	p.l.Println("[DEBUG] get record id", id)
 
-	prod, err := data.GetPRoductByID(id)
+	prod, err := data.GetProductByID(id)
 
 	switch err {
 	case nil:
 
-	case data.ErrProductNotFound
+	case data.ErrProductNotFound:
 		p.l.Println("[ERROR] fetching product", err)
 
-		rw.WriteHeader(Http.StatusNotFound)
+		rw.WriteHeader(http.StatusNotFound)
 		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	default:
@@ -55,10 +55,9 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	err = data.ToJSON(prod. rw)
+	err = data.ToJSON(prod, rw)
 	if err != nil {
-		// if error on making response
+		// we should never be here but log the error just incase
 		p.l.Println("[ERROR] serializing product", err)
 	}
-
 }
