# handlers/post.go
@@ -10,15 +10,15 @@ import (
 // Create a new product
 //
 // responses:
-// 		200: productReponse
-// 422: errorValidation
+//	200: productResponse
+//  422: errorValidation
 //  501: errorResponse
 
 // Create handles POST requests to add new products
 func (p *Products) Create(rw http.ResponseWriter, r *http.Request) {
-	// featch the product from the context
+	// fetch the product from the context
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
 
-	p.l.Printf("[DEBUG] Inserting product: %#c\n", prod)
-	data.Addproduct(prod)
+	p.l.Printf("[DEBUG] Inserting product: %#v\n", prod)
+	data.AddProduct(prod)
 }
