# handlers/put.go
@@ -6,18 +6,27 @@ import (
 	"github.com/xanthangum1/gorilla_micro/data"
 )
 
+// swagger:route PUT /products products updateProduct
+// Update a products details
+//
+// responses:
+//	201: noContentResponse
+//  404: errorResponse
+//  422: errorValidation
+
+// Update handles PUT requests to update products
 func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
 
-	// fetch the product form the context
+	// fetch the product from the context
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
 	p.l.Println("[DEBUG] updating record id", prod.ID)
 
 	err := data.UpdateProduct(prod)
-	if err == dta.ErrProductNotFound {
+	if err == data.ErrProductNotFound {
 		p.l.Println("[ERROR] product not found", err)
 
 		rw.WriteHeader(http.StatusNotFound)
-		data.ToJSON(&GenericError{Message: "Productnot found in datavase"}, rw)
+		data.ToJSON(&GenericError{Message: "Product not found in database"}, rw)
 		return
 	}
 
